--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </button>
 </div>
 </header>
-<div class="backdrop">
+<div class="backdrop is-open">
     <div class="modal-header">
         <button type="button" class="modal-header-close-button">
             <svg class="modal-close-icon" width="8" height="8">
@@ -59,28 +59,28 @@
         <ul class="menu-icon-list">
             <li class="menu-icon-item">
                 <a href="" class="menu-icon-link">
-                    <svg class="menu-social-icon" width="24" height="24" aria-label="icon-instagram">
+                    <svg class="menu-social-icon" width="40" height="40" aria-label="icon-instagram">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="menu-icon-item">
                 <a href="" class="menu-icon-link">
-                     <svg class="menu-social-icon" width="24" height="24" aria-label="icon-twitter">
+                     <svg class="menu-social-icon" width="40" height="40" aria-label="icon-twitter">
                          <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="menu-icon-item">
                 <a href="" class="menu-icon-link">
-                    <svg class="menu-social-icon" width="24" height="24" aria-label="icon-facebook">
+                    <svg class="menu-social-icon" width="40" height="40" aria-label="icon-facebook">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="menu-icon-item">
                 <a href="" class="menu-icon-link">
-                    <svg class="menu-social-icon" width="24" height="24" aria-label="icon-linkedin">
+                    <svg class="menu-social-icon" width="40" height="40" aria-label="icon-linkedin">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
@@ -88,6 +88,7 @@
         </ul>
         </address>
     </div>
+</div>
 
 
 <!--/HEADER-->
@@ -499,7 +500,7 @@
 
 <!--MODAL-->
 
-<div class="backdrop is-open">
+<!-- <div class="backdrop is-open">
     <div class="modal"> 
     <button type="button" class="modal-close-btn">
         <svg class="icon-close-btn" aria-label="close" width="8" height="8">
@@ -579,6 +580,6 @@
     </div>
 </div> -->
 
-<!--/MODAL
+<!--/MODAL-->
 </body>
 </html>
