--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </button>
 </div>
 </header>
-<div class="backdrop is-open">
+<!-- <div class="backdrop is-open">
     <div class="modal-header">
         <button type="button" class="modal-header-close-button">
             <svg class="modal-close-icon" width="8" height="8">
@@ -50,6 +50,7 @@
             <li class="menu-item"><a href="#portfolio" class="menu-link">Portfolio</a></li>
             <li class="menu-item"><a href="" class="menu-link">Contacts</a></li>
         </ul>
+        <div class="menu-contacts">
         <address class="menu-address">
         <ul class="menu-address-list">
             <li class="menu-address-item"><a href="mailto:info@devstudio.com" class="menu-address-link">info@devstudio.com</a></li>
@@ -87,8 +88,9 @@
             </li>
         </ul>
         </address>
+        </div>
     </div>
-</div>
+</div> -->
 
 
 <!--/HEADER-->
