--- a/index.html
+++ b/index.html
@@ -379,10 +379,13 @@
         <li class="portfolio">
             <div class="portfolio-photo">
                 <picture>
-                    <source media="(min-width:1158px)" srcset="./images/auto.jpg 1x, ./images/auto@2x 2x">
-                    <source media="(min-width:768px)" srcset="./images/auto-tablet.jpg.jpg 1x, ./images/auto-tablet@2x 2x">
-                    <source media="(min-width:320px)" srcset="./images/auto-mobile.jpg 1x, ./images/auto-mobile@2x 2x">
-                    <img src="./images/auto.jpg" alt="Taxi Service" width="360" height="300">
+                    <source media="(min-width:1158px)" 
+                    srcset="./images/auto.jpg 1x, ./images/auto@2x 2x" />
+                    <source media="(min-width:768px)" 
+                    srcset="./images/auto-tablet.jpg.jpg 1x, ./images/auto-tablet@2x 2x"/>
+                    <source media="(min-width:320px)" 
+                    srcset="./images/auto-mobile.jpg 1x, ./images/auto-mobile@2x 2x"/>
+                    <img src="./images/auto.jpg " alt="Taxi Service" width="360" height="300"/>
                 </picture>
             
             <p class="portfolio-photo-overlay">
