--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                     <source media="(min-width:1158px)" 
                     srcset="./images/person.jpg 1x, ./images/person@2x 2x" />
                     <source media="(min-width:768px)" 
-                    srcset="./images/person-tablet.jpg.jpg 1x, ./images/person-tablet@2x 2x" />
+                    srcset="./images/person-tablet.jpg 1x, ./images/person-tablet@2x 2x" />
                     <source media="(min-width:320px)" 
                     srcset="./images/person-mobile.jpg 1x, ./images/person-mobile@2x 2x" />
                     <img src="./images/person.jpg" alt="Online Courses" width="360" height="300">
